<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Widgets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="largeText">Texto Grande</string>
    <string name="smallText">Texto Pequeño</string>
    <string name="checkBox">CheckBox</string>
    <string name="switche">Switch</string>
    <string name="radioButton1">Radio Button 1</string>
    <string name="radioButton2">Radio Button 2</string>
    <string name="radioButton3">Radio Button 3</string>
    <string name="button">Botón</string>

</resources>
